--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "connect-session-sequelize": "^7.1.7",
+    "dotenv": "^16.4.4",
+    "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.18.0",
     "express-sessions": "^1.0.1",
-    "mysql2": "^3.9.1"
+    "mysql2": "^3.9.1",
+    "sequelize": "^6.37.0"
   }
 }
